After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 761909 - gstharness: Fix docs for stress test functions
gstharness: Fix docs for stress test functions
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gstreamer (core)
git master
Other All
: Normal normal
: 1.7.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-12 10:16 UTC by Håvard Graff (hgr)
Modified: 2016-02-12 10:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.70 KB, patch)
2016-02-12 10:16 UTC, Håvard Graff (hgr)
committed Details | Review

Description Håvard Graff (hgr) 2016-02-12 10:16:17 UTC
Created attachment 320946 [details] [review]
patch

notify is not called per buffer, but when the thread is freed.

Comment about serialized events and OOB does not make sense for upstream
events
Comment 1 Tim-Philipp Müller 2016-02-12 10:31:41 UTC
commit ff7e6a14b0033c7ecd7a2b3b7470ba7a54449c82
Author: Stian Selnes <stian@pexip.com>
Date:   Thu Jan 21 13:25:40 2016 +0100

    harness: Fix docs for stress test functions
    
    notify is not called per buffer, but when the thread is freed.
    
    Comment about serialized events and OOB does not make sense for upstream
    events.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=761909